readMe, portfolio, extra touches

--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
                     </div>
                     <div class="row">
                         <div class="col" id="about">
+                                <div class="card" style="width: 60rem; height: 22rem;">
                             <span>My name is Stefani Krautstrunk, and am currently in a full stack developer program through University
                                 of Arizona. Orginally from Chicago, IL but have been living in Tempe, AZ since 2017. I am an Accounting
                                 Analyst with a Bachelor of Arts in English and a minor in Communications. I would describe myself as a 
@@ -46,6 +47,7 @@
                             <span>Please enjoy my porfolio, and be sure to take a look at some of the projects I've created on the portfolio page.
                                 Any contact information can be found on the contact page.
                             </span>
+                        </div>
                         </div>
                         </div>
                     </div>
