--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,71 @@
                   </div>
                 </div>
               </nav>  
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="assets/images/alcohol-beer-beverage-1128975.jpg" alt="Beer">
+    <div class="card-body">
+      <h5 class="card-title">brewFinder</h5>
+      <p class="card-text">An app to find local microbreweries.</p>
+    </div>
+    <div class="card-body">
+      <a href="https://andydun9.github.io/project1/" class="card-link">Code</a>
+<span>|</span>      
+      <a href="https://andydun9.github.io/project1/" class="card-link">Website</a>
+    </div>
+  </div>
+  </div>
 
+  <div class="col-sm-6">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="assets/images/crystal.PNG" alt="Crystal" style="height:200px;width:200px;">
+      <div class="card-body">
+        <h5 class="card-title">Crystals Collector</h5>
+        <p class="card-text">Add your crystals to the correct number.</p>
+      </div>
+      <div class="card-body">
+        <a href="https://github.com/stefaniiik/unit-4-game" class="card-link">Code</a>
+  <span>|</span>      
+        <a href="https://stefaniiik.github.io/unit-4-game/" class="card-link">Website</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+      <div class="col-sm-6">
+    <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="assets/images/food.PNG" alt="Food">
+      <div class="card-body">
+        <h5 class="card-title">gifTastic</h5>
+        <p class="card-text">Generate food GIFs!</p>
+      </div>
+      <div class="card-body">
+        <a href="https://github.com/stefaniiik/gifTastic" class="card-link">Code</a>
+  <span>|</span>      
+        <a href="https://stefaniiik.github.io/gifTastic/" class="card-link">Website</a>
+      </div>
+    </div>
+    </div>
 
+    <div class="col-sm-6">
+        <div class="card" style="width: 18rem;">
+          <img class="card-img-top" src="assets/images/hallows.png" alt="Deathly Hallows Symbol">
+          <div class="card-body">
+            <h5 class="card-title">triviaGame</h5>
+            <p class="card-text">Play a Harry Potter themed trivia game.</p>
+          </div>
+          <div class="card-body">
+            <a href="https://github.com/stefaniiik/triviaGame" class="card-link">Code</a>
+      <span>|</span>      
+            <a href="https://stefaniiik.github.io/triviaGame/" class="card-link">Website</a>
+          </div>
+        </div>
+      
+    
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
