--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,34 @@
                   </div>
                 </div>
               </nav> 
-
-
+<header>
+  <div class="row">
+    <div class="col-md">
+Please see below for my contact information and professional materials.
+ </header>
+</div>
+</div>
+<div class="container" id="contactPage">
+  <div class="row">
+    <div class="col-sm-5">
+      <span>Please visit my <a href="https://www.linkedin.com/in/stefani-krautstrunk-77663176/" target="_blank">LinkedIn</a> page for an overview of my professional experience.</span>
+      <span>If you would like to see more about my professional experience, you can also view my <a href="assets/images/KrautstrunkStefani.docx.pdf" target="_balnk">resume.</a> </span>
+    </div>
+  </div><br><br>
+  <div class="row">
+    <div class="col-sm-4">
+      <span class="email">Email:</span>
+        <span>stefanikrautstrunk@gmail.com</span>
+    </div>
+  </div><br><br>
+  <div class="row">
+    <div class="col-sm-5">
+      <span></span>If you enjoy what you have seen so far, don't forget to check out my <a href="https://github.com/stefaniiik">GitHub</a> for many projects I have completed,
+      and for projects I am currently working on!</span>
+    </div>
+  </div>
+  
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
