added headers on contact page

--- a/contact.html
+++ b/contact.html
@@ -36,18 +36,21 @@ Please see below for my contact information and professional materials.
 <div class="container" id="contactPage">
   <div class="row">
     <div class="col-sm-5">
+        <span class="info">Professinal Information:</span>
       <span>Please visit my <a href="https://www.linkedin.com/in/stefani-krautstrunk-77663176/" target="_blank">LinkedIn</a> page for an overview of my professional experience.</span>
       <span>If you would like to see more about my professional experience, you can also view my <a href="assets/images/KrautstrunkStefani.docx.pdf" target="_balnk">resume.</a> </span>
     </div>
   </div><br><br>
   <div class="row">
     <div class="col-sm-4">
-      <span class="email">Email:</span>
+      <span class="info">Email:</span>
         <span>stefanikrautstrunk@gmail.com</span>
     </div>
   </div><br><br>
   <div class="row">
     <div class="col-sm-5">
+        <span class="info">GitHub:</span>
+
       <span></span>If you enjoy what you have seen so far, don't forget to check out my <a href="https://github.com/stefaniiik">GitHub</a> for many projects I have completed,
       and for projects I am currently working on!</span>
     </div>
